--- a/css/order-flow.css
+++ b/css/order-flow.css
@@ -52,7 +52,7 @@
 			height: 50px;
 		}
 		.order-footer ul li div{
-			color: rgb(153,153,153);
+			color: rgb(73,73,73);
 			font-size: 14px;
 			height: 50px;
 			width: 60px;
@@ -83,7 +83,7 @@
 			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#c8c8c8', GradientType=0)
 		}
         .order-footer ul li div{
-           width: 280px;
+           width: 285px;
         }
         .order-footer .order-date-container{
             display: none;
@@ -127,6 +127,9 @@
 		.order-footer .order-right {
 			
 		}
+        .order-footer .order-footer-wrap {
+            padding-top: 10px;
+        }
 		.order-footer .order-footer-title {
 			display: inline-block;
 			margin-left: 30px;
@@ -284,11 +287,11 @@
     	}
     	.order-body ul >li{
     		width: 100%;
-    		height: 150px;
+    		height: 130px;
     	}
     	.order-body ul>li .order-item {
     		width: 100%;
-    		height: 150px;
+    		height: 130px;
     	}
     	.order-body ul>li .order-item ul {
     		width: 100%;
@@ -380,6 +383,7 @@
         	width: 50%;
         	display: inline-block;
         }
+
         .order-body ul>li .order-item ul>li.order-content .item-line .item-line4 {
         	height: 1px;
         	line-height: 1px;
@@ -389,6 +393,9 @@
     	.order-body ul>li .order-item ul>li.order-content .order-subitem {
     		margin-left: 30px;
     	}
+        .order-body ul>li .order-item ul>li.order-content .order-desc {
+            width:331px; white-space:nowrap; word-break:keep-all; overflow:hidden; text-overflow:ellipsis;
+        }
     	.order-body ul>li .order-item ul>li.order-content .order-date {
     		float: right;
             margin-right: 10px;
@@ -489,8 +496,12 @@
     		margin-left: 5%;
     	}
         .order-detail-header .order-line{
-            height: 30px;
+            min-height: 30px;
             line-height: 30px;
+        }
+        .order-detail-header .order-desc {
+            width: 100%;
+            word-wrap: break-word; 
         }
         .order-detail-header #btn-confirm {
         	margin-left: 5%;
